2005-12-01  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (clean_daemon): Use pidfilename instead of
	LAUNCHER_PIDFILE.

2005-11-30  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/invoker.c (invoker_ack): Rename to ...
	(invoke_recv_ack): ... this. Fix all callers.
	(invoker_exec): Rename to ...
	(invoker_send_exec): ... this. Fix all callers.
	(invoker_args): Rename to ...
	(invoker_send_args): ... this. Fix all callers.

2005-11-21  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/invokelib.h (INVOKER_MAGIC): Bump version to 2.
	(INVOKER_END): New macro.
	* launcher/invoker.c (invoker_send_end): New function.
	(main): Call invoker_send_end to finish communication.
	* launcher/launcher.c (invoked_get_exec, invoked_get_args): Move
	action get logic to ...
	(invoked_get_actions): ... here. New function.
	(main): Use invoked_get_actions instead of directly using
	invoked_get_exec and invoked_get_args.

2005-11-17  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Version 0.9.

2005-11-17  Guillem Jover  <guillem.jover@nokia.com>

	* README: Merge the scattered HOWTO into the package.

2005-11-16  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (invoked_get_args): Detect buggy or malicious
	invokers trying to do a heap overflow.

2005-11-16  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (launch_process): Restore process priority to 0
	if it was < 0.

2005-10-25  Guillem Jover  <guillem.jover@nokia.com>

	* configure.ac: Version 0.8.

2005-10-25  Guillem Jover  <guillem.jover@nokia.com>

	* launcher.c (invoked_get_args): Use msg variable instead of
	prog->argc when using invoke_recv_msg to avoid warning.

2005-10-19  Guillem Jover  <guillem.jover@nokia.com>

	* COPYING: Update FSF's address.

2005-10-19  Guillem Jover  <guillem.jover@nokia.com>

	* README: Cosmetic fixes.

2005-10-18  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (fix_argv): Rename to ...